--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
 body {
     background-color: white;
 }
+h1 {
+    color: black;
+    font-family: Arial;
+    font-size: 300%;
+    text-align: center;
+}
+h2 {
+    color: black;
+    font-family: Times;
+    font-size: 150%;
+    text-align: center;   
+}
+p {
+    color: black;
+    font-family: Times;
+    font-size: 100%;
+}
 header {
     position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
-    background-color: rgb(46, 46, 46);
+    background-color: black;
     font-family: Times;
     font-size: 200%;
     text-align: center;
