--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ p {
     font-family: Times;
     font-size: 100%;
 }
+img {
+  width: 100%;
+  height: auto;
+}
 header {
     position: fixed;
     left: 0px;
