--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ p {
     font-size: 100%;
 }
 img {
-  max-height:20%;
-  width: auto;
+  width:400px;
+  height:400px;
+  object-fit:cover;
   display: inline-block;  
 }
 header {
