--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
     color: black;
-    font-family: Arial;
+    font-family: Times;
     font-size: 300%;
     text-align: center;
 }
