--- a/style.css
+++ b/style.css
@@ -1,38 +1,3 @@
 body {
-    background-color: gray;
-}
-h1 {
-    color: black;
-    font-family: Times;
-    font-size: 300%;
-    text-align: center;
-}
-h2 {
-    color: black;
-    font-family: Times;
-    font-size: 150%;
-    text-align: center;   
-}
-p {
-    color: black;
-    font-family: Times;
-    font-size: 100%;
-}
-img {
-  width:400px;
-  height:400px;
-  object-fit:cover;
-  display: inline-block;  
-}
-header {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    background-color: black;
-    font-family: Times;
-    font-size: 200%;
-    text-align: center;
-    color: white;
-    padding: 1px;
+    background-color: lightgray;
 }
